@startuml
!pragma layout smetana

title Fog Carport – Classdiagram

' ─────────────────────────────────────────
' ENTITIES
' ─────────────────────────────────────────
package entities{
abstract class User {
  - int id
  - String email
  - String address
}

class Customer {
  - String name
  - String phone
  - String password
}

class GuestCustomer {
}

class Carport{
- int width
- int length
- int height
- String roofType
- boolean shed
}

class Material {
  - int id
  - String name
  - double price
  - String description
  - int length ' nullable
}
class OrderLine {
- int quantity
}

class Order {
- int id
- double totalPrice
- String status
}

class TotalOrderLine {

}

class ListOfOrders {
}

'Aggregation/association (Has-a)
User "1" o-- "0..*" Order
OrderLine "1" o-- "1..*" Material
TotalOrderLine "1" o-- "1" OrderLine

'Composition (part-of)
Order "1" *-- "1" Carport
Order "1" *-- "1..*" TotalOrderLine
ListOfOrders "1" *-- "1..*" Order


'inheritance/Extension (Is-A)
Customer --|> User
GuestCustomer --|> User



}
' ─────────────────────────────────────────
' CONTROLLERS
' ─────────────────────────────────────────
package controllers{
  class IndexController {
        + {static} addRoutes(Javalin, ConnectionPool) : void
        + {static} closeTempOrder(Context) : void
    }

 class UserController {
        + {static} addRoutes(Javalin, ConnectionPool) : void
        + {static} createUser(Context, ConnectionPool) : void
        + {static} loginUser(Context, ConnectionPool) : void
        + {static} logoutUser(Context) : void
    }

    class AdminController {
        + {static} addRoutes(Javalin, ConnectionPool) : void

        + {static} showPendingOrders(Context, ConnectionPool) : void
        + {static} showPayedOrders(Context, ConnectionPool) : void
        + {static} showAllOrders(Context, ConnectionPool) : void
        + {static} removeOrderById(Context, ConnectionPool) : void

        + {static} showAllUsers(Context, ConnectionPool) : void
        + {static} removeUsers(Context, ConnectionPool) : void
    }
      class MaterialController{

      }

      class CaportController{

      }

      class OrderLineController{

      }

}

' ─────────────────────────────────────────
' PERSISTENCE
' ─────────────────────────────────────────
package persistence{
    class ConnectionPool {
        - {static} instance : ConnectionPool
        + {static} getInstance() : ConnectionPool
        + {static} getInstance(String, String, String, String) : ConnectionPool
        + getConnection() : Connection
        + close() : void
    }

   class OrderMapper {
        + {static} makeOrder(int, ConnectionPool) : int
        + {static} addItemToOrder(int, int, int, ConnectionPool) : void
        + {static} listOfOrdersByUser(User, ConnectionPool) : ListOfOrders
    }

    class UserMapper {
        + {static} getAllUsers(ConnectionPool) : List<User>
        + {static} getUserById(int, ConnectionPool) : User
        + {static} login(String, String, ConnectionPool) : User
        + {static} createUser(String, String, ConnectionPool) : void
    }

  class MaterialMapper{

  }

  class CaportMapper{

  }

  class OrderLineMapper{

  }

}

' ─────────────────────────────────────────
' EXCEPTIONS
' ─────────────────────────────────────────
package exceptions {
    class DatabaseException {
        + DatabaseException(String)
    }
}

' ─────────────────────────────────────────
' Utility
' ─────────────────────────────────────────

package utility{
class calculator{
}

}

@enduml